# LR6

Task1/: CMakeLists.txt
Task1/main/: main.cpp
Task1/src/: task1.cpp  task1.h
Task1/tests/: tests.cpp
Task2/: CMakeLists.txt
Task2/main/: main.cpp
Task2/src/: task2.cpp  task2.h
Task2/tests/: tests.cpp
Task3/: CMakeLists.txt
Task3/main/: main.cpp
Task3/src/: Task3.cpp  task3.h
Task3/tests/: tests.cpp
